Fix vertical alignment ofr wp-media button icon
Address https://github.com/woocommerce/woocommerce/pull/52632#discussion_r1860104575

--- a/plugins/woocommerce/client/legacy/css/admin.scss
+++ b/plugins/woocommerce/client/legacy/css/admin.scss
@@ -5623,7 +5623,6 @@ img.help_tip {
 
 			&::before {
 				font-size: inherit;
-				vertical-align: middle;
 			}
 		}
 		&.button-primary {
